Arte dos botoes e inclusao da tela de abertura(provisoria)
Por algum motivo a transicao da tela de abertura para o jogo esta demorando muito, tem que ver isso.

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,8 +1,12 @@
 [application]
 
 name="Hippo Escape"
-main_scene="res://scenes/game.tscn"
+main_scene="res://scenes/mainscreen.tscn"
 icon="res://icon.png"
+
+[autoload]
+
+transition="*res://scenes/transition.tscn"
 
 [display]
 
