--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="Hippo Escape"
-main_scene="res://scenes/game.tscn"
+main_scene="res://scenes/mainscreen.tscn"
 icon="res://icon.png"
 
 [autoload]
