--- a/export.cfg
+++ b/export.cfg
@@ -29,8 +29,8 @@ apk_expansion/public_key=""
 architecture/arm=true
 architecture/x86=false
 command_line/extra_args=""
-custom_package/debug=""
-custom_package/release=""
+custom_package/debug="C:/Users/Mateus/Desktop/BoraPorra/android_debug.apk"
+custom_package/release="C:/Users/Mateus/Desktop/BoraPorra/android_release.apk"
 debug/debugging_enabled=true
 keystore/release="C:/Users/Mateus/Desktop/Godot/debug.keystore"
 keystore/release_password=""
@@ -45,7 +45,7 @@ permissions/access_coarse_location=false
 permissions/access_fine_location=false
 permissions/access_location_extra_commands=false
 permissions/access_mock_location=false
-permissions/access_network_state=false
+permissions/access_network_state=true
 permissions/access_surface_flinger=false
 permissions/access_wifi_state=false
 permissions/account_manager=false
@@ -106,7 +106,7 @@ permissions/install_location_provider=false
 permissions/install_packages=false
 permissions/install_shortcut=false
 permissions/internal_system_window=false
-permissions/internet=false
+permissions/internet=true
 permissions/kill_background_processes=false
 permissions/location_hardware=false
 permissions/manage_accounts=false
