Auto stash before merge of "master" and "origin/master"

--- a/engine.cfg
+++ b/engine.cfg
@@ -6,7 +6,7 @@ modules="org/godotengine/godot/GodotAdMob"
 
 name="Hippo Escape"
 main_scene="res://scenes/mainscreen.tscn"
-icon="res://icon.png"
+icon="res://custom_icon.png"
 
 [autoload]
 
