aumentando buffer de audio para tirar warning

--- a/engine.cfg
+++ b/engine.cfg
@@ -8,6 +8,10 @@ name="Hippo Escape"
 main_scene="res://scenes/mainscreen.tscn"
 icon="res://custom_icon.png"
 
+[audio]
+
+stream_buffering_ms=1000
+
 [autoload]
 
 Global="*res://scripts/Global.gd"
