Mudando requirements da store
Aumento no highscore minimo para a compra dos hats

--- a/engine.cfg
+++ b/engine.cfg
@@ -30,6 +30,10 @@ teste=[key(A)]
 move_left=[key(Left)]
 move_right=[key(Right)]
 
+[locale]
+
+translations=[]
+
 [physics_2d]
 
 motion_fix_enabled=true
