Alteração no drag da hatstore

--- a/export.cfg
+++ b/export.cfg
@@ -29,8 +29,8 @@ apk_expansion/public_key=""
 architecture/arm=true
 architecture/x86=false
 command_line/extra_args=""
-custom_package/debug="C:/Users/Mateus/Desktop/BoraPorra/android_debug.apk"
-custom_package/release="C:/Users/Mateus/Desktop/BoraPorra/android_release.apk"
+custom_package/debug="C:/Users/Carlos/Desktop/Projetos/Templates Android/android_debug.apk"
+custom_package/release="C:/Users/Carlos/Desktop/Projetos/Templates Android/android_release.apk"
 debug/debugging_enabled=true
 keystore/release="C:/Users/Mateus/Desktop/Godot/debug.keystore"
 keystore/release_password=""
@@ -262,6 +262,8 @@ application/name=""
 application/short_version="1.0"
 application/signature="godotmacgame"
 application/version="1.0"
+codesign/entitlements=""
+codesign/identity=""
 custom_package/debug=""
 custom_package/release=""
 debug/debugging_enabled=true
@@ -327,6 +329,10 @@ package/publisher="CN=GodotEngine"
 package/publisher_display_name="Godot Engine"
 package/short_name="Godot"
 package/unique_name="Godot.Engine"
+signing/certificate_algorithm=1296652099
+signing/certificate_file=""
+signing/certificate_password=""
+signing/sign=false
 tiles/show_name_on_square150x150=false
 tiles/show_name_on_square310x310=false
 tiles/show_name_on_wide310x150=false
